# ArcheTrade

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  launchProd.ps1
backend/: Cargo.toml  Dockerfile  launchBackend.ps1  rebuildClean.cmd  run-backend.cmd  rustfmt.toml
backend/src/: main.rs
backend/src/application/: mod.rs  prediction_service.rs  stock_manager.rs  stock_repository.rs  stock_service.rs
backend/src/application/predicators/: ar_predictor.rs  ema_predictor.rs  linear_regression_predictor.rs  mod.rs  naive_predictor.rs  sma_predictor.rs  stock_predictor.rs
backend/src/domain/: generic_stock_data_dto.rs  indicators.rs  mod.rs  prediction.rs  prediction_point.rs  stock.rs  stock_insights.rs  stock_insights_builder.rs  stock_summary.rs  time_series.rs  utils.rs
backend/src/infrastructure/db/: mod.rs  mongo_stock_manager.rs  stock_repository.rs
backend/src/infrastructure/external_api/: alpha_vantage_repostory.rs  mod.rs  stooq_repository.rs  yahoo_client.rs
backend/src/infrastructure/external_api/job_fetch_symbol/: job_fetch_finnhub.rs  mod.rs
backend/src/infrastructure/external_api/stock_repository/: fake_stock_repository.rs  finnhub_repository.rs  mod.rs
backend/src/interfaces/: admin_handler.rs  mod.rs  stock_handler.rs
database/: Dockerfile  launch.ps1  mongod.conf
database/mongo-init/: init-stocks.js
devops/: setup.sh
frontend/: Dockerfile  launchFrontend.ps1  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  (+1 more)
(+14 files in other folders)
